test/files/neg/error-in-apply-args-2.scala
object O {
  def missingArgs(d: Double, s: String): Unit = ()

  missingArgs(math.floor("not a num"))
}