test/files/neg/error-in-apply-args-2.check
error-in-apply-args-2.scala:4: error: type mismatch;
 found   : String("not a num")
 required: Double
  missingArgs(math.floor("not a num"))
                         ^
error-in-apply-args-2.scala:4: error: not enough arguments for method missingArgs: (d: Double, s: String): Unit.
Unspecified value parameter s.
  missingArgs(math.floor("not a num"))
             ^
2 errors
